# Sparc3Dsdf

./: INSTALL.md  README.md  license  pyproject.toml  requirements.txt
scripts/: sdf.py  sdf_mesh.py  torus.py  voxel_mesh.py
src/sparc3d_sdf/: __init__.py  convert.py  flexi.py  generics.py  grid_primitives.py  isosurface.py  march.py  march_voxels.py  obj.py  sdf.py  sdf_fast.py  sparc3d.py  sparse.py
