[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "einops==0.*,>=0.8",
    "torch==2.5.1",
    "torchvision",
    "torchaudio",
    "trimesh==4.*",
    "kaolin==0.17.0",
    "scipy",
] # "kaolin==0.17.0 -f https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.5.1_cu124.html",
name = "sparc3d_sdf"
description = "Attempt to recreate Sparc3d (arXiv:2505.14521 [cs.CV])"
authors = [{ name = "Ben Kaye", email = "kaye@robots.com" }]
requires-python = ">=3.11"
version = "0.0.3"
license = "BSD-3-Clause"


[tool.ruff]
target-version = "py311"
